Remove MaxPermSize setting since it no longer exists and generates console noise.
svn path=/dso/trunk/; revision=27673